--- a/html/developer.html
+++ b/html/developer.html
@@ -9,9 +9,93 @@
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 <body>
-<div class="container">
-    <h1>Developer profile: {Developer name}</h1>
-
-</div>
+<header>
+    <div class="container">
+        <div class="row">
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">
+                        <img src="../assets/images/mywork-logo-2.png" alt="" width="100" height="100">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Link</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                   aria-expanded="false">
+                                    Dropdown
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="#">Action</a></li>
+                                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link disabled">Disabled</a>
+                            </li>
+                        </ul>
+                        <form class="d-flex" role="search">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-outline-success" type="submit">Search</button>
+                        </form>
+                        <div class="btn-group ms-2" role="group" aria-label="Basic mixed styles example">
+                            <button type="button" class="btn btn-outline-success">Login</button>
+                            <button type="button" class="btn btn-outline-primary">Register</button>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </div>
+</header>
+<main>
+    <div class="container">
+        <div class="row">
+            <div class="col col-9">
+                <div class="photo-position-contact">
+                    <div class="candidate-photo">
+                        <img src="#" alt="">
+                    </div>
+                    <div class="position-contact">
+                        <div class="position">
+                            Position
+                        </div>
+                        <div class="contact">
+                            Contact
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col col-3">Sidebar</div>
+        </div>
+    </div>
+</main>
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <a class="navbar-brand" href="#">
+                    <img src="../assets/images/mywork-logo-2.png" alt="" width="100" height="100">
+                </a>
+                <p>2022 Copyright</p>
+            </div>
+            <div class="col">Footer menu</div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
